--- a/CommonManger/CommonManager.csproj
+++ b/CommonManger/CommonManager.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\EasyWechatModels\EasyWechatModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WeChat\" />
+  </ItemGroup>
+
 </Project>
