--- a/EasyWechatWeb/EasyWechatWebApi.csproj
+++ b/EasyWechatWeb/EasyWechatWebApi.csproj
@@ -44,4 +44,10 @@
     <None Remove="..\.dockerignore" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
