新增单元测试

--- a/WechatWeb/project.config.json
+++ b/WechatWeb/project.config.json
@@ -55,11 +55,12 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx42b3c92e8c28e85b",
+  "appid": "wx43c8ca3b3066a4c8",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
-  }
+  },
+  "simulatorPluginLibVersion": {}
 }
