--- a/WechatWeb/project.private.config.json
+++ b/WechatWeb/project.private.config.json
@@ -3,7 +3,7 @@
   "projectname": "SmallProgram",
   "setting": {
     "compileHotReLoad": true,
-    "urlCheck": true,
+    "urlCheck": false,
     "coverView": true,
     "lazyloadPlaceholderEnable": false,
     "skylineRenderEnable": false,
